--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li class="bits">
                         <img src="img/linkedin.png">
                         <span class="socialMedia">
-                           <a href="https://https://www.linkedin.com/in/ovie-kelly-6619a0133/" target="_blank">LinkedIn</a>
+                           <a href="https://www.linkedin.com/in/ovie-kelly-6619a0133/" target="_blank">LinkedIn</a>
                         </span>
                     </li>
                     <li class="bits">
